# krate

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
examples/: energy_flow_demo.py  sdk_usage.py
src/dj_playlist_optimizer/: cli.py  models.py  optimizer.py  rekordbox.py
src/djkr8/: AGENTS.md  __init__.py  bpm.py  camelot.py  cli.py  optimizer.py  rekordbox.py
tests/: test_bpm.py  test_camelot.py  test_cli.py  test_energy_duration.py  test_integration.py  test_models.py  test_optimizer_features.py  test_rekordbox.py
