[project]
name = "dj-playlist-optimizer"
version = "0.1.0"
description = "DJ playlist optimizer using Google OR-Tools for harmonic mixing and BPM matching"
readme = "README.md"
authors = [
    { name = "Sage Choi", email = "sage.choi@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ortools>=9.8.3296",
]

[project.scripts]
dj-optimize = "dj_playlist_optimizer.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
major_on_zero = false
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "uv build"
